// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DefaultNightRate container tests checks \`toggleCustomPrice\` instance method when is checked 1`] = `
Object {
  "errors": Object {},
  "touched": Object {},
  "values": Object {
    "isCustomCost": true,
    "isOpened": true,
    "weeklyPrice": Object {},
  },
}
`;

exports[`DefaultNightRate container tests checks \`toggleCustomPrice\` instance method when is not checked 1`] = `
Object {
  "errors": Object {},
  "touched": Object {},
  "values": Object {
    "isCustomCost": false,
    "isOpened": true,
    "weeklyPrice": Object {},
  },
}
`;

exports[`DefaultNightRate container tests checks mapPropsToValues configs 1`] = `
Object {
  "costPerNight": 280,
  "isCustomCost": false,
  "isOpened": false,
  "weeklyPrice": Object {
    "friday_price": "320",
    "monday_price": "250",
    "saturday_price": "320",
    "sunday_price": "250",
    "thursday_price": "250",
    "tuesday_price": "250",
    "wednesday_price": "250",
  },
}
`;

exports[`DefaultNightRate container tests matches snapshot 1`] = `
<DefaultNightRate
  checkOpenedState={[MockFunction]}
  closeAllPopovers={[MockFunction]}
  closePopover={[MockFunction]}
  closePopoversAndBack={[MockFunction]}
  closePopoversAndSave={[MockFunction]}
  dirty={true}
  enableReinitialize={true}
  handleSubmit={[Function]}
  isBackPopoverVisible={false}
  isDiscardPopoverVisible={false}
  isLoading={true}
  isOpened={false}
  isSavePopoverVisible={false}
  isSubmitting={false}
  isValid={true}
  mapPropsToValues={[Function]}
  onSubmit={[Function]}
  pricingInfo={
    Object {
      "costPerNight": 280,
      "costomizialeNightCost": false,
      "minimalNightStay": "2",
      "monthlyDiscount": false,
      "monthlyDiscountPercent": 33,
      "weekNightPrice": Object {
        "friday_price": "320",
        "monday_price": "250",
        "saturday_price": "320",
        "sunday_price": "250",
        "thursday_price": "250",
        "tuesday_price": "250",
        "wednesday_price": "250",
      },
      "weeklyDiscount": false,
      "weeklyDiscountPercent": 15,
    }
  }
  selectedSlots={
    Object {
      "end": 2000-02-20T00:00:00.000Z,
      "slots": Array [
        2000-02-20T00:00:00.000Z,
      ],
      "start": 2000-02-20T00:00:00.000Z,
      "uuid": "uuid",
    }
  }
  setFieldValue={[MockFunction]}
  setFormikState={[MockFunction]}
  setValues={[MockFunction]}
  showPopover={[MockFunction]}
  showPopoverOrBack={[MockFunction]}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [MockFunction],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
  submitForm={[MockFunction]}
  toggleCustomPrice={[Function]}
  toggleOpenedState={[MockFunction]}
  validationSchema={[Function]}
  values={
    Object {
      "isCustomCost": true,
      "isOpened": true,
    }
  }
/>
`;
